--- a/css/style.css
+++ b/css/style.css
@@ -190,21 +190,24 @@ body{
         display: flex;
         flex-flow: row wrap;
         gap: 15px;
+        padding-left: 10px;
+        padding-right: 10px;
         
 
     }
-    .listado_producto-img-descripción{
+    .lista_productos_li{
         width: 180px;
         height: 280px;
         flex-grow: 1;
         background-color: #FFFFFF;
-        box-shadow:  5px 5px 5px 2px rgba(78, 76, 76, 0.3);
+        box-shadow:  5px 1px 10px 1px rgba(50, 17, 1, 1);
         padding-top: 20px;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         gap: 10px;
+        border-radius: 5px;
         
     }
 
